[gd_scene load_steps=4 format=2]

[ext_resource path="res://mats/menu/button/button.gd" type="Script" id=1]
[ext_resource path="res://mats/menu/cell_choise_.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=11]

[node name="cell_choise_" type="Panel"]
margin_right = 160.0
margin_bottom = 265.0
script = ExtResource( 2 )

[node name="cr_n_s" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 50.0
text = "new save"
script = ExtResource( 1 )

[node name="asp" type="AudioStreamPlayer" parent="cr_n_s"]
bus = "buttons"

[node name="sys_buttons" type="Control" parent="."]
margin_right = 160.0
margin_bottom = 265.0
mouse_filter = 2

[node name="sbp" type="Panel" parent="sys_buttons"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )

[node name="sbp2" type="Panel" parent="sys_buttons"]
anchor_right = 1.0
custom_styles/panel = SubResource( 11 )

[node name="cancel" type="Button" parent="sys_buttons"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -34.0
margin_right = 64.0
margin_bottom = -4.0
text = "cancel"

[node name="OK" type="Button" parent="sys_buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_right = -5.0
margin_bottom = -4.0
text = "OK"

[node name="vs" type="VSlider" parent="sys_buttons"]
margin_right = 16.0
margin_bottom = 218.0
step = 0.001

[connection signal="visibility_changed" from="." to="." method="_on_cell_choise__visibility_changed"]
[connection signal="button_down" from="cr_n_s" to="." method="_on_cr_n_s_button_down"]
[connection signal="button_down" from="cr_n_s" to="cr_n_s" method="_on_button_down"]
[connection signal="button_down" from="sys_buttons/cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="sys_buttons/OK" to="." method="_on_OK_button_down"]
